Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.1
-
6ad3445f1e159d9beea936b66d267dcaacdc5d6c (qt/qtdeclarative/5.15)
Description
We faced with the following problem: QML list view scrolls if scrolling starts from list header. To prevent it we tried to place MouseArea on a header and set preventStealing to true for it.
It worked for some cases, but if that MouseArea contains Button as a child, list scroll can be started from this button. So MouseArea allows ListView to steal events from its child.
Code sample is in attachment.
Attachments
Issue Links
- resulted from
-
QT3DS-3308 Support customer project X
-
- In Progress
-
- resulted in
-
QTBUG-101727 Adding header on ListView prevents scrolling on mobile when the delegate has MouseArea
-
- Closed
-
-
QTBUG-85302 Mouse-click catch in QML Listview's header with clip = true
-
- Closed
-